# ternlight

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json
.github/: CONTRIBUTING.md
.github/workflows/: build-engine.yml  ci.yml
docs/: README.md  architecture.md  eval-methodology.md  inference-engine.md  model-internals.md  overview.md  tern-architecture.md  tern-future-work.md  tern-inference-engine.md  tern-model-sizing.md  tern-monorepo.md  tern-phase1-prototype.md  tern-phase2-prototype.md  tern-scoping.md  tern-training-pipeline.md
docs/eval/: methodology.md
docs/training/: design.md  implementation-guide.md  milestones-phase2.md  milestones.md  model-internals.md  phase-1-conclusion.md  postmortem-bitlinear-asymmetry.md  scaled-training.md  setup.md
engine/: .gitignore  Cargo.toml  README.md
engine/.cargo/: config.toml
engine/src/: format.rs  inference.rs  kernels.rs  lib.rs  model.rs  tokenizer.rs
engine/tests/: README.md
eval/: README.md  REPORT.md
eval/benchmarks/: README.md  perf.js  smoke.js
eval/benchmarks/corpus/: smoke-pairs.json
eval/benchmarks/results/: .gitignore
eval/compatibility/: README.md  runtimes.yaml
eval/quality/: RESULTS.md  eval_python.py  prep_spearman.py  spearman.js
eval/quality/corpus/: spearman_smoke_1k.json
eval/regression/: README.md
eval/results/: README.md  quality.json
examples/docs-search/: README.md  chunks.json  index.html  main.js  style.css
examples/docs-search/scripts/: gen-corpus.js
examples/docs-search/wasm/: README.md  package.json  tern_engine.d.ts  tern_engine.js  tern_engine_bg.wasm.d.ts
models/: README.md
models/huggingface/: README.md
scripts/: README.md  build-engine.sh  release-model.sh  run-eval.sh
training/: README.md
training/distill/: README.md  config.py  data.py  evaluation.py  loss.py  model.py  requirements.txt  ternary_qat.py  train.py  trainer.py
training/distill/configs/: micro-fp32.yaml  micro-qat-resume.yaml  micro-qat.yaml  micro.yaml  mix-v3-robust.yaml  robust-eval-d384-mixv3.yaml  robust-qat-d384-mixv3.yaml  smoke-fp32.yaml  smoke-qat.yaml  smoke.yaml
training/distill/corpora/: README.md
training/distill/prep/: ingest.py  prepare.py
training/export/: README.md
training/pack/: README.md  pack.py
